[gd_scene format=3 uid="uid://c2du655xf74km"]

[ext_resource type="Script" uid="uid://2cnvc4kece4d" path="res://scripts/boss_2.gd" id="1_7quqi"]
[ext_resource type="Texture2D" uid="uid://bnrk13v2t4bkm" path="res://art/tilset/Dungeon_Character_2.png" id="1_7048x"]
[ext_resource type="AudioStream" uid="uid://ubwuunmx0lua" path="res://Assets/background/Wild Pokémon Battle (Day) - Pokémon Gold⧸Silver⧸Crystal Soundtrack.wav" id="3_bd6aq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7quqi"]
atlas = ExtResource("1_7048x")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd6aq"]
atlas = ExtResource("1_7048x")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cgg2h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7quqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd6aq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_804s4"]
size = Vector2(56, 51)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8gil1"]
radius = 12.0
height = 44.0

[node name="boss2" type="CharacterBody2D" unique_id=1002946070]
script = ExtResource("1_7quqi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1476273037]
position = Vector2(7.5, 8)
scale = Vector2(1.9375, 2)
sprite_frames = SubResource("SpriteFrames_cgg2h")
animation = &"idle"
frame_progress = 0.299583

[node name="Area2D" type="Area2D" parent="." unique_id=1730951117]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=32895419]
position = Vector2(8, 8.5)
shape = SubResource("RectangleShape2D_804s4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=451721306]
position = Vector2(8, 9)
shape = SubResource("CapsuleShape2D_8gil1")

[node name="AudioBeforeBattle" type="AudioStreamPlayer2D" parent="." unique_id=882396314]
stream = ExtResource("3_bd6aq")
volume_db = -20.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
