extends CharacterBody2D

@onready var anim_sprite: AnimatedSprite2D = $AnimatedSprite2D
@onready var area: Area2D = $Area2D
@onready var audio_before_battle: AudioStreamPlayer2D = $AudioBeforeBattle

var is_triggered := false
var battle_scene_path := "res://scene/battle_ui.tscn"

func _ready():
	# üü¢ 1. ‡∏£‡∏≠ 1 ‡πÄ‡∏ü‡∏£‡∏°‡πÉ‡∏´‡πâ‡∏£‡∏∞‡∏ö‡∏ö‡πÄ‡∏Ñ‡∏•‡∏µ‡∏¢‡∏£‡πå‡∏°‡∏≠‡∏ô‡∏™‡πÄ‡∏ï‡∏≠‡∏£‡πå‡∏ó‡∏µ‡πà‡πÄ‡∏Ñ‡∏¢‡∏ï‡∏≤‡∏¢‡πÑ‡∏õ‡πÅ‡∏•‡πâ‡∏ß‡∏≠‡∏≠‡∏Å‡∏à‡∏≤‡∏Å‡∏â‡∏≤‡∏Å‡πÉ‡∏´‡πâ‡πÄ‡∏™‡∏£‡πá‡∏à‡∏Å‡πà‡∏≠‡∏ô
	await get_tree().process_frame
	
	# üü¢ 2. ‡∏ô‡∏±‡∏ö‡∏à‡∏≥‡∏ô‡∏ß‡∏ô‡∏•‡∏π‡∏Å‡∏ô‡πâ‡∏≠‡∏á (Mob) ‡∏ó‡∏µ‡πà‡∏¢‡∏±‡∏á‡πÄ‡∏´‡∏•‡∏∑‡∏≠‡∏£‡∏≠‡∏î‡∏≠‡∏¢‡∏π‡πà‡πÉ‡∏ô‡∏â‡∏≤‡∏Å
	var active_mobs = 0
	for node in get_tree().get_nodes_in_group("mobs"):
		if not node.is_queued_for_deletion(): # ‡∏ô‡∏±‡∏ö‡πÄ‡∏â‡∏û‡∏≤‡∏∞‡∏ï‡∏±‡∏ß‡∏ó‡∏µ‡πà‡∏¢‡∏±‡∏á‡πÑ‡∏°‡πà‡πÇ‡∏î‡∏ô‡∏•‡∏ö
			active_mobs += 1
			
	# üü¢ 3. ‡∏ñ‡πâ‡∏≤‡∏¢‡∏±‡∏á‡∏°‡∏µ‡∏•‡∏π‡∏Å‡∏ô‡πâ‡∏≠‡∏á‡πÄ‡∏´‡∏•‡∏∑‡∏≠‡∏≠‡∏¢‡∏π‡πà ‡πÉ‡∏´‡πâ‡∏•‡∏ö‡∏ö‡∏≠‡∏™‡∏ó‡∏¥‡πâ‡∏á‡πÑ‡∏õ‡∏Å‡πà‡∏≠‡∏ô
	if active_mobs > 0:
		print("‡∏•‡∏π‡∏Å‡∏ô‡πâ‡∏≠‡∏á‡∏¢‡∏±‡∏á‡πÑ‡∏°‡πà‡∏ï‡∏≤‡∏¢ ‡∏ö‡∏≠‡∏™‡∏¢‡∏±‡∏á‡πÑ‡∏°‡πà‡∏≠‡∏≠‡∏Å‡∏°‡∏≤! (‡πÄ‡∏´‡∏•‡∏∑‡∏≠ ", active_mobs, " ‡∏ï‡∏±‡∏ß)")
		queue_free()
		return
		
	print("üî• ‡∏•‡∏π‡∏Å‡∏ô‡πâ‡∏≠‡∏á‡∏ï‡∏≤‡∏¢‡∏´‡∏°‡∏î‡πÅ‡∏•‡πâ‡∏ß! ‡∏ö‡∏≠‡∏™‡∏õ‡∏£‡∏≤‡∏Å‡∏è‡∏ï‡∏±‡∏ß‡πÑ‡∏î‡πâ!")

	# üîπ ‡πÄ‡∏•‡πà‡∏ô idle (‡∏ñ‡πâ‡∏≤‡∏ö‡∏≠‡∏™‡πÑ‡∏î‡πâ‡πÄ‡∏Å‡∏¥‡∏î ‡∏Ñ‡πà‡∏≠‡∏¢‡∏£‡∏±‡∏ô‡πÇ‡∏Ñ‡πâ‡∏î‡∏õ‡∏Å‡∏ï‡∏¥)
	if anim_sprite and anim_sprite.sprite_frames:
		if anim_sprite.sprite_frames.has_animation("idle"):
			anim_sprite.play("idle")
	else:
		push_error("AnimatedSprite2D ‡πÑ‡∏°‡πà‡∏ñ‡∏π‡∏Å‡∏ï‡πâ‡∏≠‡∏á")

	# üîπ connect signal
	if not area.body_entered.is_connected(_on_area_2d_body_entered):
		area.body_entered.connect(_on_area_2d_body_entered)


# --------------------------------------------------
# PLAYER ‡∏ä‡∏ô
# --------------------------------------------------
func _on_area_2d_body_entered(body):
	if is_triggered:
		return

	if not body.is_in_group("player"):
		return

	is_triggered = true
	set_physics_process(false)
	
	GameDatabase.player_last_position = body.global_position

	print("üé¨ Encounter Triggered")
	play_trigger_sequence()


# --------------------------------------------------
# ‡∏•‡∏≥‡∏î‡∏±‡∏ö Animation + ‡πÄ‡∏™‡∏µ‡∏¢‡∏á
# --------------------------------------------------
func play_trigger_sequence() -> void:
	# üé¨ 1. ‡πÄ‡∏•‡πà‡∏ô animation trigger
	if anim_sprite and anim_sprite.sprite_frames.has_animation("trigger"):
		anim_sprite.play("trigger")
		await anim_sprite.animation_finished
		
	# üîä 2. ‡πÄ‡∏•‡πà‡∏ô‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏Å‡πà‡∏≠‡∏ô‡πÄ‡∏Ç‡πâ‡∏≤ battle
	if audio_before_battle and audio_before_battle.stream:
		audio_before_battle.play()
		await get_tree().create_timer(1.0).timeout 

	# 3. ‡πÄ‡∏õ‡∏•‡∏µ‡πà‡∏¢‡∏ô‡∏â‡∏≤‡∏Å!
	start_battle()


# --------------------------------------------------
# ‡πÄ‡∏õ‡∏•‡∏µ‡πà‡∏¢‡∏ô‡∏â‡∏≤‡∏Å
# --------------------------------------------------
func start_battle():
	GameDatabase.is_boss_battle = true

	# ‚ö†Ô∏è ‡∏≠‡∏¢‡πà‡∏≤‡∏•‡∏∑‡∏°‡∏ö‡∏±‡∏ô‡∏ó‡∏∂‡∏Å‡∏ä‡∏∑‡πà‡∏≠‡∏î‡πà‡∏≤‡∏ô‡∏Å‡πà‡∏≠‡∏ô‡∏™‡∏•‡∏±‡∏ö‡∏â‡∏≤‡∏Å! (‡∏Å‡∏±‡∏ô‡∏ß‡∏≤‡∏£‡πå‡∏õ‡∏ú‡∏¥‡∏î‡∏î‡πà‡∏≤‡∏ô)
	if get_tree().current_scene:
		GameDatabase.last_world_path = get_tree().current_scene.scene_file_path

	if not ResourceLoader.exists(battle_scene_path):
		push_error("‚ùå ‡πÑ‡∏°‡πà‡∏û‡∏ö scene: " + battle_scene_path)
		is_triggered = false
		set_physics_process(true)
		return

	var result = get_tree().change_scene_to_file(battle_scene_path)

	if result != OK:
		push_error("‚ùå ‡πÄ‡∏õ‡∏•‡∏µ‡πà‡∏¢‡∏ô‡∏â‡∏≤‡∏Å‡∏•‡πâ‡∏°‡πÄ‡∏´‡∏•‡∏ß: " + str(result))
		is_triggered = false
		set_physics_process(true)
